Unable to reassign input for effect strips in the Sequencer #81594

Closed
opened 2020-10-10 10:46:28 +02:00 by Ian · 6 comments

System Information
Operating system: Windows 10
Graphics card: GeForce 1050

Blender Version
Broken: 2.90.1 (latest version recently downloaded)
Worked: Not sure. Probably worked at previous 2.8

Short description of error
Trying to reassign the inputs for an effect strip results in the message: "Cannot reassign inputs: strip has no inputs"

Exact steps for others to reproduce the error
See attached blend file. Just press R to get the error.
The original effect strip was applied to the first blue strip.
This was duplicated and you used to be able to reassign the input to a different (e.g. the red strip) clicking the strip, then the effect and hitting R (or reassign in the menu)
effect strip bug.blend

**System Information** Operating system: Windows 10 Graphics card: GeForce 1050 **Blender Version** Broken: 2.90.1 (latest version recently downloaded) Worked: Not sure. Probably worked at previous 2.8 **Short description of error** Trying to reassign the inputs for an effect strip results in the message: "Cannot reassign inputs: strip has no inputs" **Exact steps for others to reproduce the error** See attached blend file. Just press R to get the error. The original effect strip was applied to the first blue strip. This was duplicated and you used to be able to reassign the input to a different (e.g. the red strip) clicking the strip, then the effect and hitting R (or reassign in the menu) [effect strip bug.blend](https://archive.blender.org/developer/F8974145/effect_strip_bug.blend)
Author

Added subscriber: @ArrowChucker

Added subscriber: @ArrowChucker

#81789 was marked as duplicate of this issue

#81789 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @adithyareddy

Added subscriber: @adithyareddy

This issue was referenced by 2c14a950a7

This issue was referenced by 2c14a950a718b2a82d6f9da29bad038a2c91ec74

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-10-17 07:03:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81594
No description provided.